--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,16 +49,17 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling:$compose_version"
+    implementation "androidx.compose.material:material:$compose_tooling_version"
+    implementation "androidx.compose.ui:ui-tooling:$compose_tooling_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-alpha06'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0-alpha02"
     implementation 'androidx.activity:activity-compose:1.3.0-alpha06'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_tooling_version"
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_tooling_version"
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    implementation "com.google.accompanist:accompanist-coil:0.12.0"
 }
