--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     ext {
         compose_version = '1.0.0-beta07'
+        compose_tooling_version = '1.0.0-beta09'
     }
     repositories {
         google()
