--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     implementation "com.google.accompanist:accompanist-coil:0.12.0"
+    implementation "androidx.datastore:datastore:1.0.0-beta02"
 }
