--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,13 +5,13 @@ plugins {
 }
 
 android {
-    compileSdk 30
+    compileSdk 32
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.edonoxako.spacepics"
         minSdk 24
-        targetSdk 30
+        targetSdk 32
         versionCode 1
         versionName "1.0"
 
@@ -40,13 +40,13 @@ android {
     }
     composeOptions {
         kotlinCompilerExtensionVersion compose_version
-        kotlinCompilerVersion '1.4.32'
+        kotlinCompilerVersion '1.6.10'
     }
 }
 
 protobuf {
     protoc {
-        artifact = "com.google.protobuf:protoc:3.10.0"
+        artifact = "com.google.protobuf:protoc:3.20.0"
     }
 
     // Generates the java Protobuf-lite code for the Protobufs in this project. See
@@ -65,23 +65,23 @@ protobuf {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.5.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_tooling_version"
     implementation "androidx.compose.ui:ui-tooling:$compose_tooling_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-alpha06'
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0-alpha02"
-    implementation 'androidx.activity:activity-compose:1.3.0-alpha06'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-alpha06'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0-alpha06"
+    implementation 'androidx.activity:activity-compose:1.6.0-alpha01'
     testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_tooling_version"
     implementation "androidx.compose.runtime:runtime-livedata:$compose_tooling_version"
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     implementation "com.google.accompanist:accompanist-coil:0.12.0"
-    implementation "androidx.datastore:datastore:1.0.0-beta02"
+    implementation "androidx.datastore:datastore:1.0.0"
     implementation "com.google.protobuf:protobuf-javalite:3.10.0"
 }
